kubernetes/security/allow-order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-order-ingress
  namespace: shopsphere
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - user-service
          - product-service
          - payment-service
          - notification-service

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: order-service

      ports:
        - protocol: TCP
          port: 8000
